# voynow.ai

./: README.md  dockerfile  pyproject.toml  requirements.txt
src/voynow_ai/: chat.py  twitter_api.py
webapp/: next.config.ts  package-lock.json  package.json  tailwind.config.js
webapp/src/app/: BootSequence.tsx  CandleChart.tsx  ChartGrid.tsx  globals.css  layout.tsx  page.tsx
webapp/src/app/aboutme/: page.tsx
webapp/src/app/projects/: page.tsx
webapp/src/app/timeline/: page.tsx
webapp/src/app/writing/: page.tsx
webapp/src/components/: Navbar.tsx
