[project]
name = "voynow_ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "voynow", email = "voynow99@gmail.com"},
]
dependencies = ["python-dotenv>=1.1.0", "fastapi>=0.115.12", "openai>=1.74.0", "pydantic>=2.11.3", "uvicorn>=0.34.1"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
